# AstroAir-Server

./: .gitignore  .travis.yml  CMakeLists.txt  COPYRIGHT  ChangeLog  KnownBugs  Makefile  README.md  comdline.txt  config.h  config.h.in  libastro.cpp  libastro.h  logger.cpp  logger.h  main.cpp  sonar-project.properties  wsserver.cpp  wsserver.h
.circleci/: config.yml
.github/workflows/: cmake.yml
air-asi/: .json  asi_ccd.cpp  asi_ccd.h
air-indi/: indi_ccd.cpp
air-phd2/: phd2client.cpp
air-qhy/: qhy_ccd.cpp  qhy_ccd.h
cmake_modules/: FindASI.cmake  FindGPHOTO2.cmake  FindIMGTOOLS.cmake  FindIMGUI.cmake  FindINDI.cmake  FindJSONCPP.cmake  FindNOVA.cmake  FindPHD2.cmake  FindQHY.cmake  FindWEBSOCKETPP.cmake  SetTelescope.cmake
files/StarBase/: Messier.json
files/locale/po/: airserver.po  build.sh  srclist.txt
files/locale/zh_CN/LC_MESSAGES/: airserver.mo
lib/json/: libjsoncpp.so.1.9.4
lib/nova/: libnova-0.16.so.0.0.0
libasi/x64/: README
libqhy/: config.h  qhyccdcamdef.h
libqhy/armv7/: libqhyccd.so.20.11.28.21
libqhy/armv8/: libqhyccd.so.20.11.28.21
libqhy/x64/: qhyccd.lib
scripts/: build.sh  build_ci.sh
src/: air_autofocus.cpp  air_autofocus.h  air_camera.cpp  air_camera.h  air_filter.cpp  air_filter.h  air_focus.cpp  air_focus.h  air_gui.cpp  air_gui.h  air_gui.hpp  air_guider.cpp  air_guider.h  air_mount.cpp  air_mount.h  air_script.cpp  air_script.h  air_search.cpp  air_search.h  air_solver.cpp  air_solver.h  aircom.cpp  aircom.h  base64.cpp  base64.h  ccfits.cpp  ccfits.h  cfitsio.cpp  cfitsio.h  check.cpp  check.h  config.h  libastro.cpp  libastro.h  libxls.cpp  libxls.h  logger.cpp  logger.h  main.cpp  opencv.cpp  (+3 more)
src/air-asi/: asi_ccd.cpp  asi_ccd.h
src/air-gphoto2/: gphoto2_ccd.cpp  gphoto2_ccd.h
src/air-indi/: indi_client.cpp  indi_client.h  indi_device.cpp  indi_device.h
src/air-phd2/: air_phd2.cpp  air_phd2.h
src/air-qhy/: SingleFrameMode  SingleFrameMode.cpp  qhy_ccd.cpp  qhy_ccd.h
src/camera/air-asi/: asi_ccd.cpp  asi_ccd.h
src/camera/air-gphoto2/: gphoto2_ccd.cpp  gphoto2_ccd.h
src/camera/air-qhy/: qhy_ccd.cpp  qhy_ccd.h
src/filter/air-cfw/: qhy_cfw.cpp  qhy_cfw.h
src/filter/air-efw/: air_efw.cpp  air_efw.h
src/focus/air-eaf/: air_eaf.cpp  air_eaf.h
src/focus/air-grus/: air_grus.cpp  air_grus.h
src/gui/: gl3w.c  gl3w.h  imconfig.h  imgui_impl_opengl3.cpp
src/guider/air-phd2/: air_phd2.cpp  air_phd2.h
src/indi/: indiccd.cpp  indiccd.h  inditelescope.cpp  inditelescope.h
src/libqhy/: config.h  fxload  qhyccd.h  stdint.h
src/libqhy/armv7/: libqhyccd.so.20.11.29.16
src/libqhy/armv8/: libqhyccd.so.20.11.28.16
src/libqhy/x64/: libqhyccd.so.20.12.27.19  qhyccd.exp
src/libqhy/x86/: qhyccd.exp  qhyccd.lib
src/libssl/: client.pem  server.pem
src/server-gui/: CMakeLists.txt  main.cpp  server-gui_zh_CN.ts  servergui.cpp  servergui.h  servergui.ui
src/telescope/: air_com.cpp  air_com.h  air_nova.cpp  air_nova.h  ieqpro.cpp  ieqpro.h
src/telescope/iOptron/: air_ieqpro.cpp  air_ieqpro.h
src/telescope/ieqpro/: air_ieqpro.cpp  air_ieqpro.h  ieqpro.cpp  ieqpro.h
src/tools/: AutoUpdate.cpp  AutoUpdate.h  ConvertTools.cpp  ConvertTools.h  ImgFitsIO.cpp  ImgFitsIO.h  ImgTools.cpp  ImgTools.h  TcpSocket.cpp  TcpSocket.h
